force-app/main/default/objects/Variante_Producto__c/Variante_Producto__c.object-meta.xml
<CustomObject>
    <description>Variante del producto de gorras</description>
    <label>Variante_Producto</label>
    <nameField>
        <label>Variante_Producto Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Variante_Productos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>