force-app/main/default/objects/Variante_Producto__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <inlineHelpText>Color base de la gorra</inlineHelpText>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Azul,</fullName>
            </value>
            <value>
                <fullName>Blanco,</fullName>
            </value>
            <value>
                <fullName>Gris,</fullName>
            </value>
            <value>
                <fullName>Negro,</fullName>
            </value>
            <value>
                <fullName>Rojo,</fullName>
            </value>
            <value>
                <fullName>Verde,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>