force-app/main/default/objects/Variante_Producto__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>relacion entre variante y producto</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Variante_Productos</relationshipLabel>
    <relationshipName>Variante_Productos</relationshipName>
    <type>Lookup</type>
</CustomField>