force-app/main/default/objects/Variante_Producto__c/fields/SKU_ID__c.field-meta.xml
<CustomField>
    <fullName>SKU_ID__c</fullName>
    <formula>Product__r.Name &amp; &quot; - &quot; &amp; TEXT(Talla__c) &amp; &quot; - &quot; &amp; TEXT(Color__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU_ID</label>
    <type>Text</type>
</CustomField>