force-app/main/default/objects/Variante_Producto__c/fields/Talla__c.field-meta.xml
<CustomField>
    <fullName>Talla__c</fullName>
    <label>Talla</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>L,</fullName>
                <default>true</default>
                <label>L,</label>
            </value>
            <value>
                <fullName>M,</fullName>
            </value>
            <value>
                <fullName>S,</fullName>
            </value>
            <value>
                <fullName>Unitalla</fullName>
            </value>
            <value>
                <fullName>XL,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>